# podcastfeeds

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  covers.py  db.py  elevenlabs.py  extract.py  feedgen.py  ingest.py  main.py  scheduler.py  substack.py  summarize.py  tasks.py  ticktick.py  tts.py  voices.py  web.py
app/templates/: episode.html  index.html
config/: secrets.yaml.example  sources.yaml.example
scripts/: check_substack_access.py  llm_shim.py  ticktick_auth.py
tests/: conftest.py  test_extract.py  test_feedgen.py  test_ingest_helpers.py  test_substack.py  test_summarize.py  test_voices.py
