[project]
name = "podcastfeeds"
version = "0.1.0"
description = "Self-hosted RSS/Substack → neural-TTS podcast feeds, served privately over Tailscale"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: import sorting, UP: pyupgrade, B: bugbear,
# C4: comprehensions, SIM: simplifications.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line length is enforced by the formatter, not the linter
    "B008",  # FastAPI uses callables in argument defaults (Depends/Form) by design
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # host-side helper scripts do path setup before imports

[tool.pytest.ini_options]
testpaths = ["tests"]
# Bare `pytest` (CI) doesn't put the repo root on sys.path the way
# `python -m pytest` does; the app package lives at the root.
pythonpath = ["."]
